--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -21,6 +21,8 @@ body {
     margin-bottom: 40px;
     background-color: #f5f5f5;
     border-radius: 10px;
+    word-wrap: break-word;
+    white-space: normal;
 }
 
 h1 {
